--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="child content1">
                     <img src="https://media.dekoruma.com/catalogue/ANA-417414.jpg" alt="" />
                     <div class="right">
-                        <h4>Free Consulting</h4>
+                        <h4>Gratis konsultasi</h4>
                         <p>24/7 for you furiture needs</p>
                     </div>
                 </div>
